crates/toml_edit/tests/snapshots/invalid/string/bad-uni-esc-01.stderr
TOML parse error at line 1, column 25
  |
1 | bad-uni-esc-01 = "val\ue"
  |                         ^
too few unicode value digits, expected unicode hexadecimal value
